2009-12-02  Nick Clifton  <nickc@redhat.com>
	    Richard Earnshaw  <rearnsha@arm.com>

	PR gas/11013
	* config/tc-arm.c (do_t_simd2): New function.
	(insns): Use do_t_simd2 for QADD, QDADD, QSUB and QDSUB.

2009-11-30  Joseph Myers  <joseph@codesourcery.com>

	* configure: Regenerate.

2009-11-30  Nick Clifton  <nickc@redhat.com>

	PR gas/11032
	* config/tc-arm.c (relax_adr): Cope with a frag with no symbol.

2009-11-19  Jan Beulich  <jbeulich@novell.com>

	* read.c (pseudo_set): Also call copy_symbol_attributes() for
	undefined target symbol.

2009-11-18  Sebastian Pop  <sebastian.pop@amd.com>

	* config/tc-i386.c (cpu_arch): Remove cvt16.
	(md_show_usage): Same.
	* doc/c-i386.texi: Same.

2009-11-18  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_fpus): Add fpv4-sp-d16.
	(aeabi_set_public_attributes): Correctly mark VFPv3xD.

2009-11-18  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (md_assemble): Report error on invalid @tls operands
	and opcode.

2009-11-17  Sebastian Pop  <sebastian.pop@amd.com>
	    Quentin Neill  <quentin.neill@amd.com>

	* config/tc-i386.c (cpu_arch): Added .xop and .cvt16.
	(build_vex_prefix): Handle xop08.
	(md_assemble): Don't special case the constant 3 for insns using MODRM.
	(build_modrm_byte): Handle vex2sources.
	(md_show_usage): Add xop and cvt16.
	* doc/c-i386.texi: Document fma4, xop, and cvt16.

2009-11-17  Paul Brook  <paul@codesourcery.com>
	Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/c-arm.texi: Document .arch armv7e-m.
	* config/tc-arm.c (arm_ext_v6_dsp, arm_ext_v7m): New.
	(insns): Put Thumb versions of v5TExP instructions into
	arm_ext_v5exp also.  Move some Thumb variants from
	arm_ext_v6_notm to arm_ext_v6_dsp.
	(arm_archs): Add armv7e-m architecture.
	(aeabi_set_public_attributes): Handle -march=armv7e-m.

2009-11-16  Viktor Kutuzov  <vkutuzov@accesssoftek.com>

	* config/tc-arm.c (parse_operands): Encode APSR_nzcv as r15.
	(do_vmrs): New function.
	(do_vmsr): New function.